--- a/src/apps/1688Admin/webapp/stylus/oa-stuff.styl
+++ b/src/apps/1688Admin/webapp/stylus/oa-stuff.styl
@@ -333,7 +333,7 @@ PROC_ITEM_LINE_WIDTH = 0.02rem
         margin 0
         padding 0
         position absolute
-        left 10000px
+        border none
         width 0
         height 0
         font-size 0
