--- a/src/apps/1688Admin/webapp/stylus/utils.styl
+++ b/src/apps/1688Admin/webapp/stylus/utils.styl
@@ -132,6 +132,11 @@
     height 1px
     background-color GRAY_E3
 
+.text-overflow-hidden
+    text-overflow ellipsis
+    white-space nowrap
+    overflow hidden
+
 //cursor pointer
 .cursor-pointer
     cursor pointer !important
