--- a/src/apps/1688Web/components/features/features_2.pug
+++ b/src/apps/1688Web/components/features/features_2.pug
@@ -7,34 +7,34 @@
         .ft-deco.ft-deco-right
 .row.fitem-container
     .col-xs-3.scroll-anim.anim-fly-up
-        a.fitem.touch-active(href="javascript:;")
+        a.fitem.touch-active(href="resource-invest.html")
             i.iconfont.icon-rongzi.font-blue
             .fitem-title 融资服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-200ms
-        a.fitem.touch-active(href="javascript:;")
+        a.fitem.touch-active(href="resource-finance.html")
             i.iconfont.icon-caishui.font-blue
             .fitem-title 财税服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-400ms
-        a.fitem.touch-active(href="javascript:;")
+        a.fitem.touch-active(href="resource-hr.html")
             i.iconfont.icon-hr.font-blue
             .fitem-title 人力资源
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-600ms
-        a.fitem.touch-active(href="javascript:;")
+        a.fitem.touch-active(href="resource-management.html")
             i.iconfont.icon-zixun.font-blue
             .fitem-title 管理咨询
     .col-xs-3.scroll-anim.anim-fly-up
-        a.fitem.touch-active(href="javascript:;")
+        a.fitem.touch-active(href="resource-law.html")
             i.iconfont.icon-falv.font-blue
             .fitem-title 法律服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-200ms
-        a.fitem.touch-active(href="javascript:;")
+        a.fitem.touch-active(href="resource-patent.html")
             i.iconfont.icon-zhuanli.font-blue
             .fitem-title 专利服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-400ms
-        a.fitem.touch-active(href="javascript:;")
+        a.fitem.touch-active(href="resource-coach.html")
             i.iconfont.icon-peixun.font-blue
             .fitem-title 培训服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-600ms
-        a.fitem.touch-active(href="javascript:;")
+        .fitem.touch-active
             i.iconfont.icon-qita.font-blue
             .fitem-title 其他服务
