--- a/src/apps/1688Web/components/sidebar/index.pug
+++ b/src/apps/1688Web/components/sidebar/index.pug
@@ -3,7 +3,7 @@
     .sidebar-title 
         |快捷导航
         .sidebar-title-deco
-    a.sidebar-btn.sbbtn-1(href="javascript:;")
+    a.sidebar-btn.sbbtn-1(href="join-submit.html")
         i.fa.fa-sign-in
         |&nbsp;申请入驻
     a.sidebar-btn.sbbtn-2(href="javascript:;") 
