--- a/src/apps/1688Web/components/tabpage/index.styl
+++ b/src/apps/1688Web/components/tabpage/index.styl
@@ -27,7 +27,7 @@ TPC_PADDING = 0.5rem
                 font-size 0.12rem
                 padding 0 0.03rem
                 border-radius 0.02rem
-            
+
         &.active
             a
                 color THEME_COLOR !important
@@ -38,8 +38,8 @@ TPC_PADDING = 0.5rem
                     top 50%
                     margin-top -0.05rem
                     right 0.1rem
-            
-                
+
+
 
 TP_DECO_SIZE = 0.24rem
 
@@ -84,5 +84,5 @@ TP_DECO_SIZE = 0.24rem
                     padding-right 0.25rem
     .tp-content-inner
         display block
-        overflow hidden
+        //overflow hidden
         min-height 4rem
